chore: fix SonarQube code smells